--- a/package.json
+++ b/package.json
@@ -19,11 +19,10 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.6",
     "@nomicfoundation/hardhat-ignition": "^0.15.0",
-    "@nomicfoundation/hardhat-ignition-viem": "^0.15.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-    "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.6",
-    "@nomicfoundation/hardhat-viem": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
     "@types/chai": "^4.2.0",
     "@types/chai-as-promised": "^7.1.6",
     "@types/mocha": ">=9.1.0",
@@ -32,6 +31,7 @@
     "dotenv": "^16.4.5",
     "hardhat": "^2.22.3",
     "hardhat-abi-exporter": "^2.10.1",
+    "hardhat-deal": "^3.0.3",
     "hardhat-gas-reporter": "^1.0.8",
     "husky": "^9.0.11",
     "prettier": "^3.2.5",
